--- a/css/style.css
+++ b/css/style.css
@@ -90,14 +90,16 @@ header {
 }
 
 main {
+  flex: 2 1 auto;
   flex-direction: column;
-  gap: 2rem;
-  align-items: center;
+  justify-content: center;
+  gap: 3rem;
   text-align: center;
-  justify-content: space-evenly;
+  align-items: center;
 }
 
 footer {
+  flex: 0 1 auto;
   display: flex;
   justify-content: center;
 }
@@ -141,7 +143,12 @@ button, input {
   display: none;
 }
 
+.collumn {
+  flex-direction: column;
+}
+
 .card-box, .tips-box {
+  max-width: 300px;
   border: var(--border);
   flex-direction: column;
   gap: 1.5rem;
